[tool.poetry]
name = "music-and-science"
version = "0.1.0"
description = ""
authors = ["syntrice@protonmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
music21 = "^8.1.0"
pandas = "^1.5.2"
librosa = "^0.9.2"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
